unit tests were added
